<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- activities name -->
    <string name="app_name">Missouri Expeditions</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Activity List</string>
    <string name="title_activity_tab_list">Tabs and ListView</string>
    <string name="title_activity_expedition">Expeditions</string>

    <!-- Tab list activity -->
    <string name="lbl_nearby">Nearby</string>
    <string name="btn_explore">Explore</string>
    <string name="btn_saved">Saved</string>

    <!-- tab list item labels -->
    <string name="nearby_site_item_name">Mark wain Cave</string>
    <string name="nearby_site_item_mile">0.2 Miles</string>
    <string name="nearby_site_item_challenges">4 Challenges</string>

    <!-- expeditions site Activity -->
    <string name="title_activity_expedition_sites">Expedition Sites</string>
    <string name="mnu_add_to_my_expeditions_label">Add</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_record_video">RecordVideoActivity</string>
    <string name="title_activity_share_video">ShareVideoActivity</string>

</resources>
